--- a/css/nyc.css
+++ b/css/nyc.css
@@ -1,120 +1,112 @@
- mapboxgl.accessToken = 'pk.eyJ1IjoiZWR3YXJkcDciLCJhIjoiY2xzZjZhZnYwMGdrbDJpcXB6MzZsN2lzbSJ9.o11htKQkTmOqa1HNdhtenQ';
-        // FOR NAVIGATION
-        // Get the element with the class "icon"
-        let icon = document.getElementsByClassName("icon")[0];
+/* NAVIGATION STYLING */
+        /* Add a black background color to the top navigation */
+        .topnav {
+          background-color: rgb(0, 0, 0);
+          overflow: hidden;
+        }
 
-        // Add an event listener for the 'click' event on the icon element
-        icon.addEventListener('click', responsive_control);
+        /* Style the links inside the navigation bar */
+        .topnav a {
+          float: left;
+          display: block;
+          color: #f2f2f2;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 26px;
+        }
 
-        // Function to control the responsiveness of the navigation bar
-        function responsive_control() {
-            // Get the element with the id "myTopnav"
-            let x = document.getElementById("myTopnav");
+        /* Change the color of links on hover */
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
 
-            // Check if the class name of the element is "topnav"
-            if (x.className === "topnav") {
-            // If it is, add the "responsive" class to the element
-            x.className += " responsive";
-          } else {
-            // If it's not, remove the "responsive" class from the element
-            x.className = "topnav";
+        /* Add an active class to highlight the current page */
+        .topnav a.active {
+          background-color: #002fff;
+          color: white;
+        }
+
+        /* Hide the icon that should open and close the topnav on small screens */
+        .topnav .icon {
+          display: none;
+        }
+
+        /* Style for page content */
+        .content {
+          padding: 14px;
+          font-size: 22px;
+        }
+
+        /* When the screen is less than 800 pixels wide */
+        @media screen and (max-width: 800px) {
+          /* Hide all links, except for the selected tab */
+          .topnav a:not(.active) {
+            display: none;
+          }
+
+          /* Show the icon that should open and close the topnav */
+          .topnav a.icon {
+            float: right;
+            display: block;
           }
         }
-        // END OF NAVIGATION
-        const map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/edwardp7/cm85ct1y0005901r00x0bggpr',
-            center: [-74.006, 40.7128],
-            zoom: 10
-        });
 
-        const collisionGeojsonFiles = {
-            2020: 'assets/nyc_crashes_2020.geojson',
-            2021: 'assets/nyc_crashes_2021.geojson',
-            2022: 'assets/nyc_crashes_2022.geojson',
-            2023: 'assets/nyc_crashes_2023.geojson',
-            2024: 'assets/nyc_crashes_2024.geojson',
-            2025: 'assets/nyc_crashes_2025.geojson'
-        };
+        /* When the screen is less than 800 pixels wide, if the user clicks on the icon */
+        /* the "responsive" class attribute will be added to the topnav by the JavaScript code */
+        /* This media query sets the style for the unfolded topnav */
+        /* It makes the topnav look good on small screens (display the links vertically instead of horizontally)  */
+        @media screen and (max-width: 800px) {
+          .topnav.responsive {
+            position: relative;
+          }
 
-        const loadGeoJSON = async (file) => {
-            const response = await fetch(file + "?t=" + new Date().getTime());
-            return await response.json();
-        };
+          .topnav.responsive a.icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+          }
 
-        const updateMap = async (year) => {
-            const collisionData = await loadGeoJSON(collisionGeojsonFiles[year]);
-
-            if (map.getLayer('collision-cluster')) map.removeLayer('collision-cluster');
-            if (map.getLayer('collision-count')) map.removeLayer('collision-count');
-            if (map.getLayer('collision-points')) map.removeLayer('collision-points');
-            if (map.getSource('collision-points')) map.removeSource('collision-points');
-
-            map.addSource('collision-points', {
-                type: 'geojson',
-                data: collisionData,
-                cluster: true,
-                clusterMaxZoom: 14,
-                clusterRadius: 50
-            });
-
-            // Clustering layer
-            map.addLayer({
-                id: 'collision-cluster',
-                type: 'circle',
-                source: 'collision-points',
-                filter: ['has', 'point_count'],
-                paint: {
-                    'circle-color': [
-                        'step',
-                        ['get', 'point_count'],
-                        '#51bbd6', 100,
-                        '#f1f075', 1000,
-                        '#f28cb1'
-                    ],
-                    'circle-radius': [
-                        'step',
-                        ['get', 'point_count'],
-                        15, 10,
-                        20, 30,
-                        25
-                    ]
-                }
-            });
-
-            // Cluster count labels
-            map.addLayer({
-                id: 'collision-count',
-                type: 'symbol',
-                source: 'collision-points',
-                filter: ['has', 'point_count'],
-                layout: {
-                    'text-field': '{point_count_abbreviated}',
-                    'text-font': ['DIN Offc Pro Medium', 'Arial Unicode MS Bold'],
-                    'text-size': 12
-                },
-                paint: {
-                    'text-color': '#000'
-                }
-            });
-
-            // Individual collision points
-            map.addLayer({
-                id: 'collision-points',
-                type: 'circle',
-                source: 'collision-points',
-                filter: ['!', ['has', 'point_count']],
-                paint: {
-                    'circle-radius': 5,
-                    'circle-color': '#0000FF'
-                }
-            });
-        };
-
-        document.getElementById('yearSlider').addEventListener('input', (event) => {
-            const year = event.target.value;
-            document.getElementById('active-year').textContent = year;
-            updateMap(year);
-        });
-
-        updateMap(2020);
+          .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+          }
+        }
+        /* END OF NAVIGATION STYLING */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
+        #map {
+            position: absolute;
+            top: 50px;
+            bottom: 0;
+            width: 100%;
+        }
+        #controls {
+            position: absolute;
+            top: 60px;
+            left: 30px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 15px 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+        }
+        #legend {
+            margin-top: 15px;
+            font-size: 14px;
+        }
+        .legend-key {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+            margin-right: 5px;
+            border-radius: 50%;
+        }
+        .blue-dot {
+            background: #0000FF;
+        }
